Removed useless method

--- a/Covid.ipynb
+++ b/Covid.ipynb
@@ -95,9 +95,6 @@
     "    def plot_curve(self, place_data, color=None, label=None):\n",
     "        estimate = self._get_estimate(place_data)\n",
     "        self.ax.plot(estimate, label=label, color=color)\n",
-    "\n",
-    "    def plot_scatter(self, place_data, marker='x', color=None, label=None):\n",
-    "        self.ax.plot(place_data, marker, label=label, color=color)\n",
     "        \n",
     "    def plot_place(self, place, marker='x', color=None, label=None):\n",
     "        place_data = self[place]\n",
@@ -105,8 +102,7 @@
     "        self.plot_curve(place_data, label=label)\n",
     "        \n",
     "        scatter_label = f'Casos {place}'\n",
-    "        self.plot_scatter(place_data, label=scatter_label, marker=marker, color=color)\n",
-    "        \n",
+    "        self.ax.plot(place_data, marker, label=scatter_label, color=color)\n",
     "    \n",
     "    def plot_history(self, place, curves=1, shade=7, method=exponential_model):\n",
     "        place_data = self[place]\n",
@@ -128,7 +124,6 @@
     "        min_values = [min(value) for value in all_estimates]\n",
     "        plt.fill_between(estimate.index, min_values, max_values,\n",
     "                         color='gray', alpha=0.2, label='Curvas Anteriores')\n",
-    "        \n",
     "        \n",
     "    def draw(self, title, xlabel, ylabel):\n",
     "        days = mdates.DayLocator(interval=2) \n",
